// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tree/demo/basic.md correctly 1`] = `
<ul
  class="rc-tree"
  role="tree-node"
  unselectable="on"
>
  <li
    class=""
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-checkbox rc-tree-checkbox-checked"
    >
      <span
        class="rc-tree-checkbox-inner"
      />
    </span>
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="rc-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
    >
      <li
        class="rc-tree-treenode-disabled"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-checkbox rc-tree-checkbox-checked rc-tree-checkbox-disabled"
        >
          <span
            class="rc-tree-checkbox-inner"
          />
        </span>
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="parent 1-0"
        >
          <span
            class="rc-tree-title"
          >
            parent 1-0
          </span>
        </span>
        <ul
          class="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-checkbox rc-tree-checkbox-disabled"
            >
              <span
                class="rc-tree-checkbox-inner"
              />
            </span>
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="rc-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-checkbox rc-tree-checkbox-checked"
            >
              <span
                class="rc-tree-checkbox-inner"
              />
            </span>
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="rc-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-checkbox rc-tree-checkbox-checked"
        >
          <span
            class="rc-tree-checkbox-inner"
          />
        </span>
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="parent 1-1"
        >
          <span
            class="rc-tree-title"
          >
            parent 1-1
          </span>
        </span>
        <ul
          class="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-checkbox rc-tree-checkbox-checked"
            >
              <span
                class="rc-tree-checkbox-inner"
              />
            </span>
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title=""
            >
              <span
                class="rc-tree-title"
              >
                <span
                  style="color:#08c;"
                >
                  sss
                </span>
              </span>
            </span>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/basic-controlled.md correctly 1`] = `
<ul
  class="rc-tree"
  role="tree-node"
  unselectable="on"
>
  <li
    class=""
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-checkbox rc-tree-checkbox-indeterminate"
    >
      <span
        class="rc-tree-checkbox-inner"
      />
    </span>
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="0-0"
    >
      <span
        class="rc-tree-title"
      >
        0-0
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
    >
      <li
        class=""
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-checkbox rc-tree-checkbox-checked"
        >
          <span
            class="rc-tree-checkbox-inner"
          />
        </span>
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="0-0-0"
        >
          <span
            class="rc-tree-title"
          >
            0-0-0
          </span>
        </span>
        <ul
          class="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-checkbox rc-tree-checkbox-checked"
            >
              <span
                class="rc-tree-checkbox-inner"
              />
            </span>
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="0-0-0-0"
            >
              <span
                class="rc-tree-title"
              >
                0-0-0-0
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-checkbox rc-tree-checkbox-checked"
            >
              <span
                class="rc-tree-checkbox-inner"
              />
            </span>
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="0-0-0-1"
            >
              <span
                class="rc-tree-title"
              >
                0-0-0-1
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-checkbox rc-tree-checkbox-checked"
            >
              <span
                class="rc-tree-checkbox-inner"
              />
            </span>
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="0-0-0-2"
            >
              <span
                class="rc-tree-title"
              >
                0-0-0-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-checkbox"
        >
          <span
            class="rc-tree-checkbox-inner"
          />
        </span>
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="0-0-1"
        >
          <span
            class="rc-tree-title"
          >
            0-0-1
          </span>
        </span>
        <ul
          class="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-checkbox"
            >
              <span
                class="rc-tree-checkbox-inner"
              />
            </span>
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="0-0-1-0"
            >
              <span
                class="rc-tree-title"
              >
                0-0-1-0
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-checkbox"
            >
              <span
                class="rc-tree-checkbox-inner"
              />
            </span>
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="0-0-1-1"
            >
              <span
                class="rc-tree-title"
              >
                0-0-1-1
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-checkbox"
            >
              <span
                class="rc-tree-checkbox-inner"
              />
            </span>
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="0-0-1-2"
            >
              <span
                class="rc-tree-title"
              >
                0-0-1-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-checkbox"
        >
          <span
            class="rc-tree-checkbox-inner"
          />
        </span>
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="0-0-2"
        >
          <span
            class="rc-tree-title"
          >
            0-0-2
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class=""
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_close"
    />
    <span
      class="rc-tree-checkbox"
    >
      <span
        class="rc-tree-checkbox-inner"
      />
    </span>
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close"
      title="0-1"
    >
      <span
        class="rc-tree-title"
      >
        0-1
      </span>
    </span>
  </li>
  <li
    class=""
  >
    <span
      class="rc-tree-switcher rc-tree-switcher-noop"
    />
    <span
      class="rc-tree-checkbox"
    >
      <span
        class="rc-tree-checkbox-inner"
      />
    </span>
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
      title="0-2"
    >
      <span
        class="rc-tree-title"
      >
        0-2
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/customized-icon.md correctly 1`] = `
<ul
  class="rc-tree rc-tree-show-line"
  role="tree-node"
  unselectable="on"
>
  <li
    class=""
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        class="rc-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
    >
      <li
        class=""
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open rc-tree-node-selected"
          title="parent 1-0"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            parent 1-0
          </span>
        </span>
        <ul
          class="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="parent 1-1"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            parent 1-1
          </span>
        </span>
        <ul
          class="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="leaf"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            leaf
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/draggable.md correctly 1`] = `
<ul
  class="rc-tree draggable-tree"
  role="tree-node"
  unselectable="on"
>
  <li
    class=""
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      aria-grabbed="true"
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open draggable"
      draggable="true"
      title="0-0"
    >
      <span
        class="rc-tree-title"
      >
        0-0
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
    >
      <li
        class=""
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          aria-grabbed="true"
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open draggable"
          draggable="true"
          title="0-0-0"
        >
          <span
            class="rc-tree-title"
          >
            0-0-0
          </span>
        </span>
        <ul
          class="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-0"
            >
              <span
                class="rc-tree-title"
              >
                0-0-0-0
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-1"
            >
              <span
                class="rc-tree-title"
              >
                0-0-0-1
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-2"
            >
              <span
                class="rc-tree-title"
              >
                0-0-0-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_close"
        />
        <span
          aria-grabbed="true"
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close draggable"
          draggable="true"
          title="0-0-1"
        >
          <span
            class="rc-tree-title"
          >
            0-0-1
          </span>
        </span>
      </li>
      <li
        class=""
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          aria-grabbed="true"
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal draggable"
          draggable="true"
          title="0-0-2"
        >
          <span
            class="rc-tree-title"
          >
            0-0-2
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class=""
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_close"
    />
    <span
      aria-grabbed="true"
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close draggable"
      draggable="true"
      title="0-1"
    >
      <span
        class="rc-tree-title"
      >
        0-1
      </span>
    </span>
  </li>
  <li
    class=""
  >
    <span
      class="rc-tree-switcher rc-tree-switcher-noop"
    />
    <span
      aria-grabbed="true"
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal draggable"
      draggable="true"
      title="0-2"
    >
      <span
        class="rc-tree-title"
      >
        0-2
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/dynamic.md correctly 1`] = `
<ul
  class="rc-tree"
  role="tree-node"
  unselectable="on"
>
  <li
    class=""
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_close"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close"
      title="Expand to load"
    >
      <span
        class="rc-tree-title"
      >
        Expand to load
      </span>
    </span>
  </li>
  <li
    class=""
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_close"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close"
      title="Expand to load"
    >
      <span
        class="rc-tree-title"
      >
        Expand to load
      </span>
    </span>
  </li>
  <li
    class=""
  >
    <span
      class="rc-tree-switcher rc-tree-switcher-noop"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
      title="Tree Node"
    >
      <span
        class="rc-tree-title"
      >
        Tree Node
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/line.md correctly 1`] = `
<ul
  class="rc-tree rc-tree-show-line"
  role="tree-node"
  unselectable="on"
>
  <li
    class=""
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="rc-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
    >
      <li
        class=""
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="parent 1-0"
        >
          <span
            class="rc-tree-title"
          >
            parent 1-0
          </span>
        </span>
        <ul
          class="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded="true"
        >
          <li
            class=""
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="rc-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="rc-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class=""
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="rc-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class=""
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_close"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close"
          title="parent 1-1"
        >
          <span
            class="rc-tree-title"
          >
            parent 1-1
          </span>
        </span>
      </li>
      <li
        class=""
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_close"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close"
          title="parent 1-2"
        >
          <span
            class="rc-tree-title"
          >
            parent 1-2
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/search.md correctly 1`] = `
<div>
  <span
    class="ant-input-search ant-input-affix-wrapper"
    style="margin-bottom:8px;"
  >
    <input
      class="ant-input"
      placeholder="Search"
      type="text"
    />
    <span
      class="ant-input-suffix"
    >
      <i
        class="anticon anticon-search ant-input-search-icon"
      />
    </span>
  </span>
  <ul
    class="rc-tree"
    role="tree-node"
    unselectable="on"
  >
    <li
      class=""
    >
      <span
        class="rc-tree-switcher rc-tree-switcher_close"
      />
      <span
        class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close"
        title=""
      >
        <span
          class="rc-tree-title"
        >
          <span>
            <span
              style="color:#f50;"
            />
            0-0
          </span>
        </span>
      </span>
    </li>
    <li
      class=""
    >
      <span
        class="rc-tree-switcher rc-tree-switcher_close"
      />
      <span
        class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close"
        title=""
      >
        <span
          class="rc-tree-title"
        >
          <span>
            <span
              style="color:#f50;"
            />
            0-1
          </span>
        </span>
      </span>
    </li>
    <li
      class=""
    >
      <span
        class="rc-tree-switcher rc-tree-switcher-noop"
      />
      <span
        class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
        title=""
      >
        <span
          class="rc-tree-title"
        >
          <span>
            <span
              style="color:#f50;"
            />
            0-2
          </span>
        </span>
      </span>
    </li>
  </ul>
</div>
`;
